packages/isar_community_generator/test/errors/property/enum_null_value.dart
// null values are not supported

import 'package:isar_community/isar.dart';

@collection
class Model {
  Id? id;

  @Enumerated(EnumType.value, 'value')
  late MyEnum prop;
}

enum MyEnum {
  optionA;

  final String? value = null;
}
